Fix undefined Carer in provider. Text align on BookingCard tooltip.

--- a/ClientApp/app/payroll/booking.card/booking.card.css
+++ b/ClientApp/app/payroll/booking.card/booking.card.css
@@ -8,3 +8,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+::ng-deep .tooltip.run-tooltip .tooltip-inner * {
+    text-align: left;
+}
